// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate (package.json) Missing plugin package.json \`name\` field throws an error 1`] = `"Could not find \`name\` field in ESLint plugin's package.json."`;

exports[`generate (package.json) Missing plugin package.json throws an error 1`] = `"Could not find package.json of ESLint plugin."`;

exports[`generate (package.json) No configs found omits the config column 1`] = `
"<!-- begin auto-generated rules list -->

| Name                           | Description   |
| :----------------------------- | :------------ |
| [no-foo](docs/rules/no-foo.md) | disallow foo. |

<!-- end auto-generated rules list -->"
`;

exports[`generate (package.json) No configs found omits the config column 2`] = `
"# Disallow foo (\`test/no-foo\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generate (package.json) No exported rules object found throws an error 1`] = `"Could not find exported \`rules\` object in ESLint plugin."`;

exports[`generate (package.json) Scoped plugin name determines the correct plugin prefix 1`] = `
"# Disallow foo (\`@my-scope/no-foo\`)

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (package.json) plugin entry point in JSON format generates the documentation 1`] = `
"<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description            | 💼 |
| :----------------------------- | :--------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo | ✅  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (package.json) plugin entry point in JSON format generates the documentation 2`] = `
"# Description for no-foo (\`test/no-foo\`)

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;
